# HappyNest-website

./: .dockerignore  .env.example  .gitignore  .llmignore  Dockerfile  Makefile  Navbar.tsx  QnA.md  README.md  docker-compose.yaml  docker-compose.yml  github-instruction.md  happynest_blanc_belle.md  next.config.ts  package-lock.json  package.json  tsconfig.json
agent/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
agent/src/cag_agent/: api.py  cli.py  config.py  db.py  knowledge.py  llm.py  schemas.py
agent/supabase/migrations/: 001_create_chat_tables.sql  002_create_happynest_leads.sql
agent/tests/: test_integration.py  test_knowledge.py  test_llm.py
app/: globals.css  layout.tsx  page.tsx  sitemap.ts
components/: About.tsx  Amenities.tsx  Bedrooms.tsx  BookingSection.tsx  CommonAreas.tsx  Experiences.tsx  Footer.tsx  HouseRules.tsx  LivingAreas.tsx  Location.tsx  Meals.tsx  Navbar.tsx  PoolGarden.tsx  SectionLabel.tsx  Spaces.tsx  StatsBar.tsx  VideoHero.tsx  WhatsAppFab.tsx
docs/: DESIGN.md  QnA.md  README.md
graphify-out/: .auto_labels.json  .chunk_01.txt  .chunk_02.txt  .chunk_03.txt  .chunk_04.txt  .chunk_05.txt  .chunk_06.txt  .chunk_07.txt  .chunk_08.txt  .chunk_09.txt  .graphify_chunk_01.json  .graphify_chunk_02.json  .graphify_chunk_03.json  .graphify_chunk_04.json  .graphify_chunk_05.json  .graphify_chunk_06.json  .graphify_chunk_07.json  .graphify_chunk_08.json  .graphify_chunk_09.json  .graphify_chunk_manifest.json  .graphify_chunk_warnings.txt  .graphify_python  .graphify_transcripts.json  GRAPH_REPORT.md  cost.json  (+3 more)
(+42 files in other folders)
